@startuml
class VideoSampleProducer {
    + StartCapture(item:GraphicsCaptureItem) : void
    + StopCapture() : void
    + VideoSampleProducer()
    + Dispose() : void
}
class "DefaultEncodeableEventQueue`1"<T> {
}
class MultithreadLock {
    + MultithreadLock(multithread:Multithread)
    + Dispose() : void
}
"DefaultEncodeableEventQueue`1" "<DirectXVideoSample>" <|-- VideoSampleProducer
VideoSampleProducer +-- MultithreadLock
IDisposable <|-- MultithreadLock
@enduml
